--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Sniper</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
     <h1>Search for Deals on Games</h1>
