added thumnails for games and a list of platforms to search from

--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -16,6 +16,18 @@
     <br><br>
     <form method="post" action="/form">
         Max price: <input type="number" name="maxPrice" value="15">
+        Platform: 
+        <select name="platform" id="platform">
+            <option value="1">Steam</option>
+            <option value="2">GamersGate</option>
+            <option value="3">GreenManGaming</option>
+            <option value="4">Amazon</option>
+            <option value="5">GameStop</option>
+            <option value="6">Direct2Drive</option>
+            <option value="7">GOG</option>
+            <option value="8">Origin</option>
+            <option value="9">GamersGate</option>
+        </select>
         <input type="submit" id="getDealsBtn" value="Get Deals">
     </form>
     
