--- a/templates/deals.ejs
+++ b/templates/deals.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Deals</h1>
-    <div id="testDiv">
+    <div id="dealsContainerDiv">
         <%- dealsData%>
     </div>
 </body>
