--- a/templates/deals.ejs
+++ b/templates/deals.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-    <h1>Deals</h1>
+    <div class="clearContainer"><h1>Deals</h1></div>
     <div id="dealsContainerDiv">
         <%- dealsData%>
     </div>
