--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -6,30 +6,34 @@
     <title>Game Sniper</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
-<body>
-    <h1>Search for Deals on Games</h1>
-    <h2>Profile:</h2>
-    <div>
-        <%- data %>
+<body >
+    
+    <div class="clearContainer">
+        <h1>Search for Deals on Games</h1>
+        <h2>Profile:</h2>
+        <div>
+            <%- data %>
+        </div>
+        <br><br>
 
+        <form method="post" action="/form">
+            Max price: <input type="number" name="maxPrice" value="15">
+           <br><br>Platform: 
+            <select name="platform" id="platform">
+                <option value="1">Steam</option>
+                <option value="2">GamersGate</option>
+                <option value="3">GreenManGaming</option>
+                <option value="4">Amazon</option>
+                <option value="5">GameStop</option>
+                <option value="6">Direct2Drive</option>
+                <option value="7">GOG</option>
+                <option value="8">Origin</option>
+                <option value="9">GamersGate</option>
+            </select>
+            <input type="submit" class="btn" id="getDealsBtn" value="Get Deals">
+        </form>
     </div>
-    <br><br>
-    <form method="post" action="/form">
-        Max price: <input type="number" name="maxPrice" value="15">
-        Platform: 
-        <select name="platform" id="platform">
-            <option value="1">Steam</option>
-            <option value="2">GamersGate</option>
-            <option value="3">GreenManGaming</option>
-            <option value="4">Amazon</option>
-            <option value="5">GameStop</option>
-            <option value="6">Direct2Drive</option>
-            <option value="7">GOG</option>
-            <option value="8">Origin</option>
-            <option value="9">GamersGate</option>
-        </select>
-        <input type="submit" id="getDealsBtn" value="Get Deals">
-    </form>
+    
     
 </body>
 </html>
