--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -10,11 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
 </head>
 <body class ="home">
-    <h1>Welcome to Game Sniper!</h1>
-    <h2>Login to continue to search for you favorite games!</h2>
-    <h3>If you dont have an account already please register</h3>
-    <a href = "/login"> Login </a>
-    <a href = "/register"> Register </a>
+    <div class="clearContainer">
+        <h1>Welcome to Game Sniper!</h1>
+            <h2>Login to continue to search for you favorite games!</h2>
+            <h3>If you dont have an account already please register</h3>
+            <div class="btnsDiv">
+                <a href = "/login" class="btn"> Login </a>
+                <a href = "/register" class="btn"> Register </a>
+            </div>
+    </div>
+    
+    
+    
     
 </body>
 </html>
