--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -8,15 +8,19 @@
     
 </head>
 <body>
-    <h1>If you dont have an account already please register</h1>
-    <h2> <%- error %></h2>
-    <form method="post" action="/login">
-        First Name: <input type="text" name="firstname">
-        Last Name: <input type="text" name="lastname">
-        Email Name: <input type="email" name="email">
-        <input type="submit" id="login" value="Login">
-    </form>
-    <br> <br>
-    <a href = "/register"> Register </a>
+    <div class="clearContainer">
+        <h1>If you dont have an account already please register</h1>
+            <h2> <%- error %></h2>
+            <form method="post" action="/login">
+                First Name: <input type="text" name="firstname">
+                Last Name: <input type="text" name="lastname">
+                <br><br>Email Name: <input type="email" name="email">
+                <br><br><input type="submit" class="btn" id="login" value="Login">
+            </form>
+            <br> <br>
+            <a href = "/register"> Register </a>
+    </div>
+    
+    
 </body>
 </html>
