--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -7,14 +7,17 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-    <h1>If you already have an account please login</h1>
-    <form method="post" action="/register">
-        First Name: <input type="text" name="firstname">
-        Last Name: <input type="text" name="lastname">
-        Email Name: <input type="email" name="email">
-        <input type="submit" id="login" value="Register">
-    </form>
-    <br><br>
-    <a href = "/login"> Login </a>
+    <div class="clearContainer">
+        <h1>If you already have an account please login</h1>
+            <form method="post" action="/register">
+                First Name: <input type="text" name="firstname">
+                Last Name: <input type="text" name="lastname">
+                <p>Email Name: <input type="email" name="email"></p>
+                <input type="submit" class="btn"  id="login" value="Register">
+            </form>
+            <br><br>
+            <a href = "/login"> Login </a>
+    </div>
+    
 </body>
 </html>
