--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -12,7 +12,7 @@
 <body class ="home">
     <div class="clearContainer">
         <h1>Welcome to Game Sniper!</h1>
-            <h2>Login to continue to search for you favorite games!</h2>
+            <h2>Login to continue to search for deals on your favorite games!</h2>
             <h3>If you dont have an account already please register</h3>
             <div class="btnsDiv">
                 <a href = "/login" class="btn"> Login </a>
