--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Sniper</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <script src="/script.js" defer></script>
 </head>
 <body >
     
@@ -16,19 +17,14 @@
         </div>
         <br><br>
 
-        <form method="post" action="/form">
-            Max price: <input type="number" name="maxPrice" value="15">
+        <form method="post" id="form" action="/deals">
+            Max price: <input type="number" id= "maxPrice" name="maxPrice" value="15">
            <br><br>Platform: 
             <select name="platform" id="platform">
                 <option value="1">Steam</option>
                 <option value="2">GamersGate</option>
                 <option value="3">GreenManGaming</option>
-                <option value="4">Amazon</option>
-                <option value="5">GameStop</option>
-                <option value="6">Direct2Drive</option>
-                <option value="7">GOG</option>
-                <option value="8">Origin</option>
-                <option value="9">GamersGate</option>
+                
             </select>
             <input type="submit" class="btn" id="getDealsBtn" value="Get Deals">
         </form>
