--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -16,9 +16,9 @@
                 Last Name: <input type="text" name="lastname">
                 <br><br>Email Name: <input type="email" name="email">
                 <br><br><input type="submit" class="btn" id="login" value="Login">
+                <a class="btn" href = "/register"> Register </a>
             </form>
             <br> <br>
-            <a href = "/register"> Register </a>
     </div>
     
     
