--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -14,9 +14,10 @@
                 Last Name: <input type="text" name="lastname">
                 <p>Email Name: <input type="email" name="email"></p>
                 <input type="submit" class="btn"  id="login" value="Register">
+                <a class="btn" href = "/login"> Login </a>
             </form>
             <br><br>
-            <a href = "/login"> Login </a>
+            <a class="btn" href = "/login"> Login </a>
     </div>
     
 </body>
