--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -6,6 +6,9 @@
     <title>Game Sniper</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <script src="/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+ES:wght@100..400&display=swap" rel="stylesheet">
 </head>
 <body >
     
