--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -15,9 +15,9 @@
         <h1>If you dont have an account already please register</h1>
             <h2> <%- error %></h2>
             <form method="post" action="/login">
-                First Name: <input type="text" name="firstname">
-                Last Name: <input type="text" name="lastname">
-                <br><br>Email Name: <input type="email" name="email">
+                First Name: <input type="text" name="firstname" required>
+                Last Name: <input type="text" name="lastname" required>
+                <br><br>Email Name: <input type="email" name="email" required>
                 <br><br><input type="submit" class="btn" id="login" value="Login">
                 <a class="btn" href = "/register"> Register </a>
             </form>
