--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -13,9 +13,9 @@
     <div class="clearContainer">
         <h1>If you already have an account please login</h1>
             <form method="post" action="/register">
-                First Name: <input type="text" name="firstname">
-                Last Name: <input type="text" name="lastname">
-                <p>Email Name: <input type="email" name="email"></p>
+                First Name: <input type="text" name="firstname" required>
+                Last Name: <input type="text" name="lastname" required>
+                <p>Email Name: <input type="email" name="email" required></p>
                 <input type="submit" class="btn"  id="login" value="Register">
                 <a class="btn" href = "/login"> Login </a>
             </form>
