--- a/templates/deals.ejs
+++ b/templates/deals.ejs
@@ -11,6 +11,8 @@
 </head>
 <body>
     <div class="clearContainer"><h1>Deals</h1></div>
+    <br><br>
+    <a href = "/" class="btn largeBtn"> Home </a>
     <div id="dealsContainerDiv">
         <%- dealsData%>
     </div>
