--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -31,6 +31,8 @@
             </select>
             <input type="submit" class="btn" id="getDealsBtn" value="Get Deals">
         </form>
+        <br><br>
+        <a href = "/" class="btn largeBtn"> Home </a>
     </div>
     
     
