--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -20,6 +20,7 @@
                 <a class="btn" href = "/login"> Login </a>
             </form>
             <br><br>
+            <a href = "/" class="btn largeBtn"> Home </a>
     </div>
     
 </body>
