--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -22,7 +22,9 @@
                 <a class="btn" href = "/register"> Register </a>
             </form>
             <br> <br>
+            <a href = "/" class="btn largeBtn"> Home </a>
     </div>
+    
     
 </body>
 </html>
